[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
directories = "6.0.0"
lofty = "0.24.0"
rand = "0.10.1"
ratatui = "0.30.1"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
unicode-width = "0.2.2"
walkdir = "2.5.0"
