[package]
name = "orbit"
version = "0.1.0"
edition = "2024"
description = "A beautiful local music player TUI with buckets and a graphic EQ"
authors = ["Benjamin Lee"]
license = "MIT"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
directories = "6.0.0"
lofty = "0.24.0"
rand = "0.10.1"
ratatui = "0.30.1"
rodio = "0.22.2"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
souvlaki = "0.8.3"
unicode-width = "0.2.2"
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.7"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
